# cs107-FinalProject

./: .swp  .travis.yml  README.md  codecov.yml  requirements.txt  setup.cfg  workflow.yml
.github/workflows/: workflow.yml
autodiff/: AD_test.py  __init__.py  autodiff.py  codecov.yml  test_AD.py  visualizer.py
docs/: documentation.md  milestone1.md  milestone2.md  milestone2_progress.md
src/autodiff/: autodiff.py
tests/: AD_test.py  autodiff.py  test_simple.py
