[metadata]
name = autodiffvis-teapeople
version = 0.0.1
author = David Berthiaume, Lily Qian, Angel Hsu, Maggie Wu
author_email = dberthiaume@g.harvard.edu, sqian@g.harvard.edu, angelyinhuahsu@g.harvard.edu, yitong_wu@g.harvard.edu
description = This package implements automatic differentiation with the extension of a visualizer.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/cs107-theteapeople/cs107-FinalProject
project_urls =
    Documentation = https://github.com/cs107-theteapeople/cs107-FinalProject/blob/main/docs/milestone2.md
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = autodiff
packages = find:
python_requires = >=3.6

[options.packages.find]
where = autodiff

[options.extras_require]
testing = pytest

